cert-manager-ingress-test/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: httpd-example
  name: httpd-example-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-example
  template:
    metadata:
      labels:
        app: httpd-example
    spec:
      containers:
        - image: httpd
          name: httpd
          ports:
            - containerPort: 80
              protocol: TCP
