cert-manager-ingress-test/ingress-notls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: httpd-example
  name: httpd-example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: notls.k8s.mgaydash.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: httpd-example-service
                port:
                  number: 80
